@@ -123,6 +123,7 @@ Bugs fixed
 - Bug 2318 - MPDU Aggregation fails with TCP
 - Bug 2319 - BlockAckTimeout value is too low for 802.11n operating at 2.4 GHz
 - Bug 2321 - Wifi rate managers should not be triggered for each MPDU when A-MPDU is used
+- Bug 2327 - CWmin value selection for 802.11g is not compliant with the standard rules
 
 Known issues
 ------------
